cmd/gameserverapi/deployment/secured/deploy_mtls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thundernetes-gameserverapi
  namespace: thundernetes-system
  labels:
    app: thundernetes-gameserverapi
spec:
  selector:
    matchLabels:
      app: thundernetes-gameserverapi
  replicas: 1
  template:
    metadata:
      labels:
        app: thundernetes-gameserverapi
    spec:
      containers:
        - image: ghcr.io/playfab/thundernetes-gameserverapi:${IMAGE_TAG}
          name: gameserverapi
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 100m
              memory: 500Mi
          ports:
            - containerPort: 5001
              hostPort: 5001
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5001
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5001
            initialDelaySeconds: 3
            periodSeconds: 10
      serviceAccountName: thundernetes-controller-manager
      terminationGracePeriodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: thundernetes-gameserverapi
  namespace: thundernetes-system
spec:
  selector:
    app: thundernetes-gameserverapi
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thundernetes-gameserverapi-ingress
  namespace: thundernetes-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-secret: "thundernetes-system/tls-secret"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${HOST}
  - secretName: tls-secret
  rules:
  - host: ${HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thundernetes-gameserverapi
            port:
              number: 5001
